add popup script

--- a/www/index.html
+++ b/www/index.html
@@ -15,5 +15,6 @@
             <input id="id-browse-less" type="checkbox" class="switch-input" checked>
             <label for="id-browse-less" class="switch-label">Browse Less</label>
         </form>
+        <script type="text/javascript" src="js/popup.js"></script>
     </body>
 </html>
