--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
         <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0' name='viewport' />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/popup.css">
-        <link rel="icon" type="image/png" href="img/icons/icon.png">
+        <link rel="icon" type="image/png" href="img/icons/icon16.png">
         <title>Browse Less</title>
     </head>
     <body>
