--- a/www/popup.html
+++ b/www/popup.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <form id="id-options" class="options">
-            <input id="id-browse-less" type="checkbox" class="switch-input" checked>
+            <input id="id-browse-less" type="checkbox" class="switch-input">
             <label for="id-browse-less" class="switch-label">Browse Less</label>
             <button id="id-refresh" type="button" class="md-btn" autofocus>Refresh Page</button>
             <a href="#" id="id-review"><i class="material-icons">favorite</i> write a review</a>
