add hostname blacklist

--- a/www/popup.html
+++ b/www/popup.html
@@ -11,11 +11,11 @@
         <title>Browse Less</title>
     </head>
     <body>
-        <form id="id-options" class="options">
-            <input id="id-browse-less" type="checkbox" class="switch-input">
-            <label for="id-browse-less" class="switch-label">Browse Less</label>
-            <button id="id-refresh" type="button" class="md-btn" autofocus>Refresh Page</button>
-            <a href="#" id="id-review"><i class="material-icons">favorite</i> write a review</a>
+        <form id="options" class="options">
+            <h1>Browse Less</h1>
+            <p>Select "Disable" to prevent script from loading on this page.</p>
+            <button id="stateToggle" type="button" class="md-btn"></button>
+            <a href="#" id="review"><i class="material-icons">favorite</i> write a review</a>
         </form>
         <script type="text/javascript" src="js/popup.js"></script>
     </body>
