update blacklist intention

--- a/www/popup.html
+++ b/www/popup.html
@@ -13,7 +13,7 @@
     <body>
         <form id="options" class="options">
             <h1>Browse Less</h1>
-            <p>Select "Disable" to prevent script from loading on this page.</p>
+            <p id="instructions"></p>
             <button id="stateToggle" type="button" class="md-btn"></button>
             <a href="#" id="review"><i class="material-icons">favorite</i> write a review</a>
         </form>
