--- a/www/popup.html
+++ b/www/popup.html
@@ -11,6 +11,7 @@
     </head>
     <body>
         <form id="options" class="options">
+            <img src="img/icons/icon48.png" class="logo">
             <h1>Browse Less</h1>
             <p id="instructions">Be more productive by fading this page or the entire website.</p>
             <label class="toggle">
