Add visibility slider

--- a/www/popup.html
+++ b/www/popup.html
@@ -28,6 +28,13 @@
                 <input id="toggleWebsite" type="checkbox">
                 <span class="switch"></span>
             </label>
+            <div class="slider">
+                <span>
+                    <span class="material-icons material-icons-outlined">visibility</span>
+                </span>
+                <input type="range" id="scale" name="vol" min="1" max="5">
+                <span class="switch"></span>
+            </div>
             <a href="#" id="review"><i class="material-icons">favorite</i> write a review</a>
         </form>
         <script type="text/javascript" src="js/popup.js"></script>
